# AeroSync

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTORS.md  Kconfig  README.md  aerosync.ld  limine.conf  pxs.cfg  voidframex.ld
.p/: prob1.md
aerosync/: Kconfig  asic.c  capability.c  cred.c  ksymtab.c  limine_modules.c  mod_loader.c  mutex.c  panic.c  percpu.c  rcu.c  resdomain.c  rw_semaphore.c  signal.c  softirq.c  srcu.c  timer.c  wait.c  workqueue.c
aerosync/asrx/: loader.c
aerosync/fkx/: README.md  elf_parser.c  elf_parser.h  ksymtab.c  loader.c
aerosync/sched/: Kconfig  completion.c  core.c  deadline.c  elf_loader.c  fair.c  idle.c  pelt.c  process.c  psi.c  rt.c  stats.c  switch.asm  topology.c  vfs.c
aerosync/sysintf/: Kconfig  README.md  acpi.c  acpi_dev.c  block.c  char.c  crypto.c  dma.c  dma_pool.c  dmar.c  fb.c  fw.c  ic.c  iommu.c  madt.c  panic.c  pci.c  time.c  tty.c
arch/: Kconfig
arch/x64/: BOOTX64.EFI  cpu.c  exception.c  fpu.c  gdt.c  gdt_tss.asm  smp.c  tsc.c
arch/x86_64/: aerosync.ld  cpu.c  exception.c  fpu.c  gdt_tss.asm  requests.c  signal.c  smp.c  topology.c  tsc.c
cmake/: HostTools.cmake  aerosync-compile.cmake  asrx.cmake  asrx_modules.cmake  cache.cmake  ccache.cmake  configuration.cmake  dependencies.cmake  fkx.cmake  fkx_modules.cmake  flags.cmake  generate_key_header.cmake  isogen.cmake  kconfig.cmake  limine.cmake  platform.cmake  run.cmake  source.cmake  standard.cmake  version.cmake  vmx.cmake
cmake/toolchain/: AeroSyncClang.cmake  AeroSyncClangOSX.cmake  AeroSyncGcc.cmake  aocc.cmake  clang.cmake  icx.cmake
configuration/compatability/: Kconfig
configuration/configs/: amd64  amd64-hardened
configuration/miscellaneous/: Kconfig
crypto/: Kconfig  aes_generic.c  aes_ni.c  blake2s.c  crc32.c  hmac.c  hw.c  init.c  rng.c  rng_hw.c  rng_sw.c
crypto/sha/: sha1.c  sha256.c  sha256_ni.c  sha512.c
doc/: aeroq.md  build_system.md  cmdline.md  devices.md  file_organization.md  initialization.md  kconfig.md  memory_management.md  naming_conventions.md  roadmap.md  udm.md  vfs.md
drivers/: Kconfig
drivers/acpi/: Kconfig  acpica_osl.c  power.c  shutdown.c  uacpi_glue.c
drivers/apic/: apic.c  ic.c  ic.cmake  ioapic.c  pic.c  x2apic.c  xapic.c
drivers/block/: Kconfig
drivers/char/: pty.c  pty.cmake
drivers/fw/: Kconfig  efi.c  fw.c  fw.cmake  nvram.c  smbios.c
drivers/graphics/: Kconfig
drivers/iommu/: Kconfig  vtd.cmake
drivers/misc/: splash.c  splash.cmake
drivers/pci/: backend_ecam.c  backend_pio.c  pci.c  pci.cmake
drivers/timer/: hpet.c  pit.c  time.c  timer.c  timer.cmake
drivers/uart/: Kconfig  serial.c  serial_core.c  uart.cmake
fs/: Kconfig  devfs.c  devtmpfs.c  file.c  fs_struct.c  initramfs.c  namei.c  pipe.c  procfs.c  pseudo_fs.c  resfs.c  select.c  sysfs.c  tmpfs.c  tmpfs.h  ustar.c  vfs.c  vfs_events.c  vfs_test.c
include/: compiler.h
include/aerosync/: asic.h  asrx.h  atomic.h  bitops.h  capability.h  classes.h  cmdline.h  compiler.h  completion.h  cred.h  crypto.h  defer.h  elf.h  errno.h  export.h  font.h  kref.h  ksymtab.h  limine_modules.h  mcs.h  mod_loader.h  mutex.h  panic.h  percpu.h  pid_ns.h  preempt.h  psf.h  psi.h  rcu.h  resdomain.h  resource.h  rw_semaphore.h  rwlock.h  scatterlist.h  semaphore.h  seqlock.h  signal.h  softirq.h  spinlock.h  srcu.h  (+8 more)
include/asm/: big_endian.h  byteorder.h  little_endian.h  swab.h
include/crypto/: aes.h  crc32.h  hmac.h  rng.h
include/drivers/: io.h
include/fs/: devfs.h  devtmpfs.h  file.h  fs_struct.h  initramfs.h  procfs.h  pseudo_fs.h  sysfs.h  ustar.h  vfs.h  vfs_events.h
include/kernel/: atomic.h  bitops.h  classes.h  cmdline.h  completion.h  ctype.h  elf.h  mutex.h  panic.h  rw_semaphore.h  semaphore.h  signal.h  spinlock.h  types.h  version.h  version.h.in  wait.h
include/lib/: bitmap.h  id_alloc.h  list.h  log.h  math.h  printk.h  rbtree.h  ringbuf.h  string.h  uaccess.h  vsprintf.h
include/linux/: bsearch.h  container_of.h  idr.h  interval_tree.h  interval_tree_generic.h  kernel.h  kfifo.h  klist.h  list.h  list_sort.h  llist.h  lockdep_types.h  log2.h  lwq.h  maple_tree.h  math64.h  minmax.h  plist.h  poison.h  polynomial.h  radix-tree.h  rbtree.h  rbtree_augmented.h  rbtree_types.h  rculist.h  rcupdate.h  refcount.h  scatterlist.h  sort.h  swab.h  types.h  unaligned.h  uuid.h  xarray.h  xxhash.h
include/mm/: gfp.h  kheap.h  ksm.h  mm_types.h  mmio.h  mmu_gather.h  page.h  pmm.h  shm.h  slab.h  slub.h  stack.h  swap.h  tlb_batch.h  userfaultfd.h  vfs.h  vm_object.h  vm_tuning.h  vma.h  vmalloc.h  workingset.h  zmm.h  zone.h
include/pxs/: protocol.h
init/: main.c
kconfig/compatability/: Kconfig
kconfig/configs/: amd64  amd64-hardened
kconfig/miscellaneous/: Kconfig
kernel/: cmdline.c  mutex.c  panic.c  percpu.c  rcu.c  rw_semaphore.c  signal.c  wait.c
kernel/fkx/: README.md  elf_parser.c  elf_parser.h  ksymtab.c  loader.c
kernel/sched/: completion.c  core.c  elf_loader.c  fair.c  idle.c  process.c  rt.c  stats.c  switch.asm  topology.c
kernel/sysintf/: README.md  block.c  dma.c  ic.c  panic.c  pci.c  time.c
keys/: fkx_root.key
lib/: Kconfig  bitmap.c  bsearch.c  builtins.c  cmdline.c  ctype.c  errname.c  ic.c  id_alloc.c  idr.c  interval_tree.c  kfifo.c  klist.c  kstrtox.c  kstrtox.h  list_debug.c  list_sort.c  llist.c  log.c  lwq.c  maple_tree.c  memcat_p.c  plist.c  polynomial.c  printk.c  radix-tree.c  radix-tree.h  rbtree.c  refcount.c  ringbuf.c  sort.c  string.c  uaccess.c  uuid.c  vsprintf.c  xarray.c  xxhash.c
lib/linearfb/: LICENSE  (+6 more)
mm/: Kconfig  compaction.c  filemap.c  khugepaged.c  ksm.c  memory.c  mmio.c  mmu_gather.c  numa.c  oom.c  page_alloc.c  pmm.c  pmm_perf_test.c  shm.c  slab.c  slab_sheaf.c  slub.c  ssp.c  stack.c  swap.c  tiered.c  tlb_batch.c  userfaultfd.c  vfs.c  vm_object.c  vm_tuning.c  vma.c  vma_test.c  vmalloc.c  vmm.c  workingset.c  writeback.c  zmm.c
tools/: bochs.conf.in  font2psf.c  kconfig_to_cmake.py  limine.conf.in  vmware.vmx.in
tools/fkx_signer/: CMakeLists.txt  ed25519.c  ed25519.h  hmac.c  hmac.h  main.c  sha512.c  sha512.h
(+227 files in other folders)
